# simhospital

./: BUILD.bazel  README.md  WORKSPACE  buildci.sh  cloudbuild.yaml
ci/gcp_ubuntu/: build.sh  presubmit.cfg
cmd/generator/: BUILD.bazel  generator.go
cmd/simulator/: BUILD.bazel  simulator.go  simulator_test.go
configs/: BUILD.bazel
configs/hardcoded_messages/: invalid_messages.yml
configs/hl7_messages/: allergies.csv  data.yml  diagnoses.csv  doctors.yml  ethnicity.csv  header.yml  hl7.yml  locations.yml  london_ethnicities.csv  order_profiles.yml  patient_class.csv  procedures.csv
configs/pathways/: aki_pathways.yml  hardcoded_messages_pathways.yml  pathways.yml  sample_pathways.yml  sample_pathways_json.yml  test_pathways.yml
docs/: README.md  arguments.md  contributing.md  dashboard.md  extend-sh.md  get-started.md  monitor.md  sample.md  write-pathways.md
docs/artifacts/: messages.out
pkg/clock/: BUILD.bazel  clock.go  clock_test.go
pkg/config/: BUILD.bazel  csv.go  data.go  data_test.go  hl7.go  hl7_test.go  mapping.go  names.go  notes.go  notes_test.go
pkg/constants/: BUILD.bazel  abnormal_flag.go  abnormal_flag_test.go  encounter_status.go  hl7.go  pathway.go
pkg/doctor/: BUILD.bazel  doctors.go  doctors_test.go
pkg/examples/hl7tofhirutils/: BUILD.bazel  message.go  message_test.go  reference_range.go  reference_range_test.go
pkg/fhir/: BUILD.bazel  bundler.go  resource.go  resource_test.go
pkg/fhircore/: BUILD.bazel  data_types.go  data_types_test.go  extension.go  extension_test.go  identifier.go  identifier_test.go  reference.go
pkg/files/: BUILD.bazel  files.go  files_test.go
pkg/gender/: BUILD.bazel  gender.go  gender_test.go
pkg/generator/: BUILD.bazel  generator.go  generator_test.go  patient_class.go
pkg/generator/address/: BUILD.bazel  address.go  address_test.go  postcode.go  postcode_test.go
pkg/generator/codedelement/: BUILD.bazel  allergy.go  allergy_test.go  coded_element.go  coded_element_test.go  diagnosis_procedures.go  diagnosis_procedures_test.go
pkg/generator/document/: BUILD.bazel  document.go  document_test.go
pkg/generator/header/: BUILD.bazel  header.go  header_test.go  message_control.go  message_control_test.go
pkg/generator/id/: BUILD.bazel  id.go
pkg/generator/names/: BUILD.bazel  names.go  names_test.go
pkg/generator/notes/: BUILD.bazel  notes.go  notes_test.go
pkg/generator/order/: BUILD.bazel  abnormal_flag.go  abnormal_flag_test.go  order.go  order_test.go
pkg/generator/person/: BUILD.bazel  ethnicity.go  ethnicity_test.go  person.go  person_test.go
pkg/generator/text/: BUILD.bazel  text.go  text_test.go
pkg/hardcoded/: BUILD.bazel  message.go  message_test.go  prod_message_test.go
pkg/hl7/: BUILD.bazel  data_types.go  data_types_test.go  example_custom_segment.go  mllp.go  mllp_test.go  parser.go  parser_test.go  parserv2.go  parserv2_test.go  rewrite.go  rewrite_test.go  schema.go  schema_test.go  sender.go  sender_test.go  unescape.go
pkg/hl7ids/: BUILD.bazel  identifier_uk.go  identifier_uk_test.go
pkg/hl7tofhir/: BUILD.bazel  r4_codes_convertor.go  r4_codes_convertor_test.go  r4_default_mappings.go
pkg/hl7tofhirmap/: BUILD.bazel  r4_codes_convertor.go  r4_codes_convertor_test.go  r4_default_mappings.go
pkg/hospital/: BUILD.bazel  event_types.go  events.go  messages.go  resources_test.go  simulated_hospital.go  simulated_hospital_test.go
pkg/hospital/runner/: BUILD.bazel  runner.go  runner_test.go
pkg/hospital/runner/authentication/: BUILD.bazel  middleware.go  middleware_test.go
pkg/ir/: BUILD.bazel  ir.go  ir_test.go
pkg/location/: BUILD.bazel  location.go  location_test.go
pkg/logging/: BUILD.bazel  formatter.go  logging.go  logging_source_test.go  logging_test.go
pkg/message/: BUILD.bazel  messages.go  messages_test.go
pkg/monitoring/: BUILD.bazel  metrics.go  metrics_test.go  server.go
pkg/orderprofile/: BUILD.bazel  order_profile.go  order_profile_test.go  value.go  value_generator.go  value_generator_test.go  value_test.go
pkg/pathway/: BUILD.bazel  collection.go  collection_test.go  deterministic_manager.go  deterministic_manager_test.go  distribution_manager.go  distribution_manager_test.go  manager.go  parser.go  parser_test.go  pathway.go  pathway_test.go  (+3 more)
pkg/resource/: BUILD.bazel  marshaller.go  marshaller_test.go  output.go  output_test.go  resource.go  resource_test.go
pkg/resource/cloud/: BUILD.bazel  cloud.go  cloud_test.go
pkg/state/: BUILD.bazel  base.go  event.go  message.go  patient.go  patient_test.go  patients_map.go  patients_map_test.go  queue.go  queue_test.go
pkg/state/persist/: BUILD.bazel  persist.go
pkg/test/: BUILD.bazel  config.go
pkg/test/data/: historicname_boys_test.csv  historicname_girls_test.csv  sh_allergies_test.csv  sh_complex_order_profiles_test.yml  sh_data_message_config_test.yml  sh_diagnoses_test.csv  sh_doctors_test.yml  sh_ethnicity_test.csv  sh_header_config_test.yml  sh_locations_test.yml  sh_message_config_test.yml  sh_order_profiles_test.yml  sh_patient_class_test.csv  sh_procedures_test.csv  surnames_test.txt
pkg/test/data/hardcoded/: sh_invalid_messages.yml
pkg/test/data/sh_pathways/: sh_multiple_alert_pathways_test.yml  sh_pathways_test.yml
pkg/test/message_builder/: BUILD.bazel  builder.go  builder_test.go
pkg/test/testaddress/: BUILD.bazel  address.go
pkg/test/testclock/: BUILD.bazel  testclock.go
pkg/test/testdate/: BUILD.bazel  date.go
pkg/test/testfhir/: BUILD.bazel  extension.go  output.go  reference.go  resource.go
pkg/test/testhl7/: BUILD.bazel  parser.go  segments.go  sender.go
pkg/test/testhospital/: BUILD.bazel  hospital.go
pkg/test/testid/: BUILD.bazel  id.go
pkg/test/testlocation/: BUILD.bazel  location.go
pkg/test/testmetrics/: BUILD.bazel  metrics.go
pkg/test/testnotes/: BUILD.bazel  notes.go
pkg/test/testperson/: BUILD.bazel  testperson.go
pkg/test/testresource/: BUILD.bazel  output.go  resource.go
pkg/test/teststate/: BUILD.bazel  teststate.go
pkg/test/testtext/: BUILD.bazel  text.go
pkg/test/testwrite/: BUILD.bazel  write.go
(+45 files in other folders)
