# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//docker:docker.bzl", "docker_push")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_layer")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

exports_files(["LICENSE"])

# gazelle:prefix github.com/google/simhospital
gazelle(name = "gazelle")

# Explicit mappings for Gazelle because google/fhir does not play nice with Gazelle and generates incorrect paths.
# gazelle:resolve go github.com/google/fhir/go/proto/google/fhir/proto/r4/core/resources/allergy_intolerance_go_proto @com_google_fhir//proto/google/fhir/proto/r4/core/resources:allergy_intolerance_go_proto
# gazelle:resolve go github.com/google/fhir/go/proto/google/fhir/proto/r4/core/resources/bundle_and_contained_resource_go_proto @com_google_fhir//proto/google/fhir/proto/r4/core/resources:bundle_and_contained_resource_go_proto
# gazelle:resolve go github.com/google/fhir/go/proto/google/fhir/proto/r4/core/resources/condition_go_proto @com_google_fhir//proto/google/fhir/proto/r4/core/resources:condition_go_proto
# gazelle:resolve go github.com/google/fhir/go/proto/google/fhir/proto/r4/core/resources/encounter_go_proto @com_google_fhir//proto/google/fhir/proto/r4/core/resources:encounter_go_proto
# gazelle:resolve go github.com/google/fhir/go/proto/google/fhir/proto/r4/core/resources/location_go_proto @com_google_fhir//proto/google/fhir/proto/r4/core/resources:location_go_proto
# gazelle:resolve go github.com/google/fhir/go/proto/google/fhir/proto/r4/core/resources/patient_go_proto @com_google_fhir//proto/google/fhir/proto/r4/core/resources:patient_go_proto
# gazelle:resolve go github.com/google/fhir/go/proto/google/fhir/proto/r4/core/resources/practitioner_go_proto @com_google_fhir//proto/google/fhir/proto/r4/core/resources:practitioner_go_proto
# gazelle:resolve go github.com/google/fhir/go/proto/google/fhir/proto/r4/core/resources/procedure_go_proto @com_google_fhir//proto/google/fhir/proto/r4/core/resources:procedure_go_proto
# gazelle:resolve go github.com/google/fhir/go/proto/google/fhir/proto/r4/core/resources/observation_go_proto @com_google_fhir//proto/google/fhir/proto/r4/core/resources:observation_go_proto
# gazelle:resolve go github.com/google/fhir/go/proto/google/fhir/proto/r4/core/datatypes_go_proto @com_google_fhir//proto/google/fhir/proto/r4/core:datatypes_go_proto
# gazelle:resolve go github.com/google/fhir/go/proto/google/fhir/proto/r4/core/codes_go_proto @com_google_fhir//proto/google/fhir/proto/r4/core:codes_go_proto
# gazelle:resolve go github.com/google/fhir/go/jsonformat @com_google_fhir//go/jsonformat:jsonformat
# gazelle:resolve go github.com/google/fhir/go/fhirversion @com_google_fhir//go/fhirversion:fhirversion

container_layer(
    name = "configs_hardcoded_messages_layer",
    directory = "/health/configs/hardcoded_messages",
    files = [
        "//configs:hardcoded_messages",
    ],
)

container_layer(
    name = "configs_hl7_messages_layer",
    directory = "/health/configs/hl7_messages",
    files = [
        "//configs:hl7_messages",
    ],
)

container_layer(
    name = "configs_third_party_layer",
    directory = "/health/configs/hl7_messages/third_party",
    files = [
        "//configs:third_party",
    ],
)

container_layer(
    name = "configs_notes_layer",
    directory = "/health/configs/hl7_messages/third_party/notes",
    files = [
        "//configs:notes",
    ],
)

container_layer(
    name = "configs_pathways_layer",
    directory = "/health/configs/pathways",
    files = [
        "//configs:pathways",
    ],
)

container_layer(
    name = "configs_symlink_layer",
    symlinks = {
        "/configs": "/health/configs",
    },
)

container_layer(
    name = "web_scripts_layer",
    directory = "/health/web/static/scripts",
    files = [
        "//web/static:scripts",
    ],
    symlinks = {
        "/web/static/scripts": "/health/web/static/scripts",
    },
)

container_layer(
    name = "web_stylesheets_layer",
    directory = "/health/web/static/stylesheets",
    files = [
        "//web/static:stylesheets",
    ],
    symlinks = {
        "/web/static/stylesheets": "/health/web/static/stylesheets",
    },
)

container_layer(
    name = "web_index_layer",
    directory = "/health/web/static",
    files = [
        "//web/static:index",
    ],
    symlinks = {
        "/web/static": "/health/web/static",
    },
)

container_image(
    name = "simhospital_container_image",
    base = "@ubuntu//image:image",
    directory = "/health",
    files = ["//cmd/simulator"],
    layers = [
        ":configs_hardcoded_messages_layer",
        ":configs_hl7_messages_layer",
        ":configs_third_party_layer",
        ":configs_notes_layer",
        ":configs_pathways_layer",
        ":configs_symlink_layer",
        ":web_scripts_layer",
        ":web_stylesheets_layer",
        ":web_index_layer",
    ],
    stamp = True,
)

docker_push(
    name = "simhospital_image_push",
    image = ":simhospital_container_image",
    registry = "gcr.io",
    repository = "<your_repository_here>/simhospital",
    tag = "latest",
)
