# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

exports_files(["LICENSE"])

filegroup(
    name = "hl7_messages",
    srcs = glob([
        "hl7_messages/*.csv",
        "hl7_messages/*.yml",
    ]),
)

exports_files(srcs = [
    "hl7_messages/allergies.csv",
    "hl7_messages/data.yml",
    "hl7_messages/diagnoses.csv",
    "hl7_messages/doctors.yml",
    "hl7_messages/ethnicity.csv",
    "hl7_messages/header.yml",
    "hl7_messages/hl7.yml",
    "hl7_messages/locations.yml",
    "hl7_messages/london_ethnicities.csv",
    "hl7_messages/order_profiles.yml",
    "hl7_messages/patient_class.csv",
    "hl7_messages/procedures.csv",
])

filegroup(
    name = "hardcoded_messages",
    srcs = glob([
        "hardcoded_messages/*.yml",
    ]),
)

exports_files(srcs = ["hardcoded_messages/invalid_messages.yml"])

filegroup(
    name = "third_party",
    srcs = glob([
        "hl7_messages/third_party/*.csv",
        "hl7_messages/third_party/*.txt",
    ]),
)

exports_files(srcs = [
    "hl7_messages/third_party/historicname_tcm77-254032-boys.csv",
    "hl7_messages/third_party/historicname_tcm77-254032-girls.csv",
    "hl7_messages/third_party/note_types.txt",
    "hl7_messages/third_party/nouns.txt",
    "hl7_messages/third_party/surnames.csv",
    "hl7_messages/third_party/surnames.txt",
])

filegroup(
    name = "notes",
    srcs = glob([
        "hl7_messages/third_party/notes/*.jpg",
        "hl7_messages/third_party/notes/*.pdf",
        "hl7_messages/third_party/notes/*.png",
        "hl7_messages/third_party/notes/*.rtf",
        "hl7_messages/third_party/notes/*.txt",
    ]),
)

exports_files(srcs = [
    "hl7_messages/third_party/notes/note1.jpg",
    "hl7_messages/third_party/notes/note1.pdf",
    "hl7_messages/third_party/notes/note1.png",
    "hl7_messages/third_party/notes/note1.rtf",
    "hl7_messages/third_party/notes/note1.txt",
    "hl7_messages/third_party/notes/note2.pdf",
    "hl7_messages/third_party/notes/note2.png",
    "hl7_messages/third_party/notes/note2.rtf",
    "hl7_messages/third_party/notes/note2.txt",
    "hl7_messages/third_party/notes/note3.txt",
])

exports_files(srcs = [
    "pathways/aki_pathways.yml",
    "pathways/hardcoded_messages_pathways.yml",
    "pathways/pathways.yml",
    "pathways/sample_pathways.yml",
    "pathways/sample_pathways_json.yml",
    "pathways/test_pathways.yml",
])

filegroup(
    name = "pathways",
    srcs = glob(["pathways/*.yml"]),
)
