# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

go_library(
    name = "go_default_library",
    srcs = ["simulator.go"],
    importpath = "github.com/google/simhospital/cmd/simulator",
    deps = [
        "//pkg/config:go_default_library",
        "//pkg/hl7:go_default_library",
        "//pkg/hospital:go_default_library",
        "//pkg/hospital/runner:go_default_library",
        "//pkg/logging:go_default_library",
        "//pkg/starter:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "simulator",
    embed = [":go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["simulator_test.go"],
    embed = [":go_default_library"],
    deps = ["//pkg/test:go_default_library"],
)
