# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "event_types.go",
        "events.go",
        "messages.go",
        "simulated_hospital.go",
    ],
    importpath = "github.com/google/simhospital/pkg/hospital",
    deps = [
        "//pkg/clock:go_default_library",
        "//pkg/config:go_default_library",
        "//pkg/constants:go_default_library",
        "//pkg/doctor:go_default_library",
        "//pkg/generator:go_default_library",
        "//pkg/generator/header:go_default_library",
        "//pkg/generator/id:go_default_library",
        "//pkg/generator/person:go_default_library",
        "//pkg/hardcoded:go_default_library",
        "//pkg/hl7:go_default_library",
        "//pkg/ir:go_default_library",
        "//pkg/location:go_default_library",
        "//pkg/logging:go_default_library",
        "//pkg/message:go_default_library",
        "//pkg/monitoring:go_default_library",
        "//pkg/orderprofile:go_default_library",
        "//pkg/pathway:go_default_library",
        "//pkg/processor:go_default_library",
        "//pkg/resource:go_default_library",
        "//pkg/resource/cloud:go_default_library",
        "//pkg/state:go_default_library",
        "//pkg/state/persist:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@org_golang_google_protobuf//encoding/prototext:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "resources_test.go",
        "simulated_hospital_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/constants:go_default_library",
        "//pkg/generator/header:go_default_library",
        "//pkg/hardcoded:go_default_library",
        "//pkg/hl7:go_default_library",
        "//pkg/ir:go_default_library",
        "//pkg/logging:go_default_library",
        "//pkg/message:go_default_library",
        "//pkg/pathway:go_default_library",
        "//pkg/processor:go_default_library",
        "//pkg/state:go_default_library",
        "//pkg/state/persist:go_default_library",
        "//pkg/test:go_default_library",
        "//pkg/test/testhl7:go_default_library",
        "//pkg/test/testhospital:go_default_library",
        "//pkg/test/testlocation:go_default_library",
        "//pkg/test/testmetrics:go_default_library",
        "//pkg/test/testresource:go_default_library",
        "//pkg/test/teststate:go_default_library",
        "//pkg/test/testwrite:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_protobuf//testing/protocmp:go_default_library",
    ],
)
