# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "marshaller.go",
        "output.go",
        "resource.go",
    ],
    importpath = "github.com/google/simhospital/pkg/resource",
    deps = [
        "//pkg/config:go_default_library",
        "//pkg/constants:go_default_library",
        "//pkg/gender:go_default_library",
        "//pkg/generator/codedelement:go_default_library",
        "//pkg/generator/id:go_default_library",
        "//pkg/generator/order:go_default_library",
        "//pkg/ir:go_default_library",
        "//pkg/logging:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_google_fhir//go/fhirversion",
        "@com_google_fhir//go/jsonformat",
        "@com_google_fhir//proto/google/fhir/proto/r4/core:codes_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core:datatypes_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core/resources:allergy_intolerance_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core/resources:bundle_and_contained_resource_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core/resources:condition_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core/resources:encounter_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core/resources:location_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core/resources:observation_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core/resources:patient_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core/resources:practitioner_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core/resources:procedure_go_proto",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "marshaller_test.go",
        "output_test.go",
        "resource_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/config:go_default_library",
        "//pkg/constants:go_default_library",
        "//pkg/ir:go_default_library",
        "//pkg/test/testid:go_default_library",
        "//pkg/test/testresource:go_default_library",
        "//pkg/test/testwrite:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_google_fhir//proto/google/fhir/proto/r4/core:codes_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core:datatypes_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core/resources:allergy_intolerance_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core/resources:bundle_and_contained_resource_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core/resources:condition_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core/resources:encounter_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core/resources:location_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core/resources:observation_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core/resources:patient_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core/resources:practitioner_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core/resources:procedure_go_proto",
        "@org_golang_google_protobuf//encoding/prototext:go_default_library",
        "@org_golang_google_protobuf//testing/protocmp:go_default_library",
    ],
)
