# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

exports_files(["LICENSE"])

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    data = [
        ":data",
        ":hardcoded",
        ":sh_pathways",
        "//configs:hardcoded_messages",
        "//configs:hl7_messages",
        "//configs:notes",
        "//configs:pathways",
        "//configs:third_party",
    ],
    importpath = "github.com/google/simhospital/pkg/test",
    deps = ["//pkg/config:go_default_library"],
)

exports_files(srcs = [
    "data/hardcoded/sh_invalid_messages.yml",
    "data/historicname_boys_test.csv",
    "data/historicname_girls_test.csv",
    "data/sh_allergies_test.csv",
    "data/sh_complex_order_profiles_test.yml",
    "data/sh_data_message_config_test.yml",
    "data/sh_diagnoses_test.csv",
    "data/sh_doctors_test.yml",
    "data/sh_ethnicity_test.csv",
    "data/sh_header_config_test.yml",
    "data/sh_locations_test.yml",
    "data/sh_message_config_test.yml",
    "data/sh_order_profiles_test.yml",
    "data/sh_pathways/sh_multiple_alert_pathways_test.yml",
    "data/sh_pathways/sh_pathways_test.yml",
    "data/sh_patient_class_test.csv",
    "data/sh_procedures_test.csv",
    "data/surnames_test.txt",
])

filegroup(
    name = "data",
    srcs = glob([
        "data/*.csv",
        "data/*.txt",
        "data/*.yml",
    ]),
)

filegroup(
    name = "hardcoded",
    srcs = glob(["data/hardcoded/*.yml"]),
)

filegroup(
    name = "sh_pathways",
    srcs = glob(["data/sh_pathways/*.yml"]),
)
