# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "message.go",
        "reference_range.go",
    ],
    importpath = "github.com/google/simhospital/pkg/examples/hl7tofhirutils",
    deps = [
        "//pkg/fhircore:go_default_library",
        "//pkg/hl7tofhirmap:go_default_library",
        "//pkg/logging:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_google_fhir//proto/google/fhir/proto/r4/core:datatypes_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core/resources:observation_go_proto",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "message_test.go",
        "reference_range_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/fhircore:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_google_fhir//proto/google/fhir/proto/r4/core:codes_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core:datatypes_go_proto",
        "@com_google_fhir//proto/google/fhir/proto/r4/core/resources:observation_go_proto",
        "@org_golang_google_protobuf//testing/protocmp:go_default_library",
    ],
)
