# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "abnormal_flag.go",
        "order.go",
    ],
    importpath = "github.com/google/simhospital/pkg/generator/order",
    deps = [
        "//pkg/config:go_default_library",
        "//pkg/constants:go_default_library",
        "//pkg/doctor:go_default_library",
        "//pkg/generator/id:go_default_library",
        "//pkg/ir:go_default_library",
        "//pkg/logging:go_default_library",
        "//pkg/message:go_default_library",
        "//pkg/orderprofile:go_default_library",
        "//pkg/pathway:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_google_fhir//proto/google/fhir/proto/r4/core:codes_go_proto",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "abnormal_flag_test.go",
        "order_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/config:go_default_library",
        "//pkg/constants:go_default_library",
        "//pkg/doctor:go_default_library",
        "//pkg/ir:go_default_library",
        "//pkg/orderprofile:go_default_library",
        "//pkg/pathway:go_default_library",
        "//pkg/test:go_default_library",
        "//pkg/test/testwrite:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_google_fhir//proto/google/fhir/proto/r4/core:codes_go_proto",
    ],
)
